add Form validation in login page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_catelog_demo
+name: iReport_Flutter
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
